T1087: Fixed css bad contrast for theme muskathlon.

--- a/theme_muskathlon/static/src/scss/website.css
+++ b/theme_muskathlon/static/src/scss/website.css
@@ -10,3 +10,15 @@ h3 {
 header .btn {
   font-size: 1rem;
 }
+
+.bg-secondary .form-check * {
+  color: white;
+}
+
+.bg-secondary .text-danger {
+  color: white !important;
+}
+
+.bg-secondary .bootstrap-datetimepicker-widget {
+  color: #495057;
+}
